Build Issues in Arkham Change Favicon Change Logo in Login Page and Menu Increase Menu spacing in tray for profile dropdown Issues In merge Preferences App issue in Arkham Merge branch 'UI' into QA Admin App Icons Clean up Splash UI Cursor Pointer for profile Logout. Clean up fonts in Login page and Clean up styling in login page

--- a/bos/src/client/assets/scss/index.scss
+++ b/bos/src/client/assets/scss/index.scss
@@ -2,7 +2,11 @@
 @import "~@osjs/gui/dist/main.css";
 @import "~@osjs/dialogs/dist/main.css";
 @import "~@osjs/panels/dist/main.css";
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,900');
 
+html{
+    font-family: 'Lato';
+}
 .osjs-window-header{
 	height:3em;
 }
