--- a/bos/src/client/assets/scss/login.scss
+++ b/bos/src/client/assets/scss/login.scss
@@ -11,22 +11,27 @@ body {
     height: 100%;
     margin: 0;
 }
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,900');
 body.login{
     background-image: url('../images/wallpaper.png');
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: Arial,Helvetica,sans-serif;
+    font-family: 'Lato';
     font-size: 14px;
     font-weight: 400;
     line-height: 1.57;
     color: #545456;
     background-color: #fff;
 }
+img#ox-logo {
+    width: 100%;
+    height: auto;
+}
 .loginContainer {
-    height: 100%;
-    width: auto;
-    display: flex !important;
-    flex-direction: row-reverse;
+  height: 100%;
+  width: 100%;
+  display: flex !important;
+  flex-direction: row-reverse;
 }
 #login-container {
     position: fixed;
@@ -43,12 +48,10 @@ body.login{
 }
 
 #ox-login-form {
-    width: 31%;
-    min-height: 100%;
-    position: relative;
-    background: rgba(255, 255, 255, 0.8);
-    flex-flow: column;
-    flex-grow: 3;
+  position: relative;
+  background: rgba(255, 255, 255, 0.8);
+  flex-flow: column;
+  flex-grow: 3;
 }
 
 #ox-login-form {
@@ -90,13 +93,14 @@ a.discrete {
   }
 button {
   -webkit-appearance:  none; 
-  width:  auto;
+  width: 100%;
   cursor:pointer;
   min-width:  100px;
   border-radius:  .25em; 
   text-align:  center; 
   padding:  15px 40px;
-  margin-top:  5px; 
+  margin-top:  10px;
+  margin-bottom:  10px;
   background-color: #275362; 
   color:  #fff; 
   font-size:  14px;
@@ -182,12 +186,12 @@ $displacement:  3px;
     align-items: center;
     padding: 65px;
 }
-.form-signin__footer{
-    justify-content: space-between;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    display: flex;
-    align-items: center;
+.form-signin__footer {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
 }
 .form-signin {
     width: 100%;
@@ -270,4 +274,69 @@ $displacement:  3px;
   .ox-imgDiv{
     margin-bottom: 30px;
   }
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  position: absolute;
+  width: 350px;
+  background-color: #555;
+  color: #fff;
+  text-align: left;
+  padding: 5px 5px;
+  border-radius: 6px;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.6s;
+  right: 10%;
+  top: -100%;
+}
+.tooltip-left {
+  top: -5px;
+  bottom: auto;
+  right: 128%;
+}
+
+.resetPasswordInputField {
+  display: inline-flex;
+
+  .newPasswordDiv {
+    display: inline;
+    width: 100%;
+  }
+
+  .infoDiv {
+    display: inline;
+    width: 10%;
+    margin: auto;
+    border-bottom: none;
+  }
+}
+
+.passwordRestInfoIcon {
+  color: white;
+  font-size: 1.5em;
+  border-radius: 10px;
+  background-color: #b08bf8;
+}
+a.footer-link{
+  color: #275262;
+    text-decoration: dashed;
+}
+a.forgotpasswordLink{
+margin:15px;
+  color: #275262;
+  border-bottom: 1px dotted #275262;
+    text-decoration: none;
+}
+.footer{
+  position: absolute;
+  display: flex;
+  bottom: 30px;
+  width: 100%;
+  flex-direction: column;
 }
